InLine transaction editing

--- a/BudgetApp/Pages/Index.razor
+++ b/BudgetApp/Pages/Index.razor
@@ -18,7 +18,7 @@
                 </div>
             </div>
             <div class="row">
-                <div>
+                <div class="col-xl-12">
                     <TransactionList BudgetId="DefaultBudgetId.Value"/>
                 </div>
             </div>
