--- a/BudgetApp/Pages/Components/Transactions/TransactionList.razor
+++ b/BudgetApp/Pages/Components/Transactions/TransactionList.razor
@@ -10,53 +10,122 @@
 @using CsvHelper
 @using System.Dynamic
 @using System.Globalization
+@using System.Transactions
+@using BudgetApp.Core
 @using BudgetApp.Core.Features.BankAccounts.Models
 @using BudgetApp.Core.Services
 @using BudgetApp.Helpers
 @using BudgetApp.Pages.Components.Imports
+@using Radzen.Blazor
 @inject DialogService DialogService
 @inject IMediator Mediator
 
 <div class="transactionContainer">
     <div class="buttonContainer">
         
-        <label class="rz-button">
-            <RadzenButton Shade="Shade.Dark" Click="@(_ => OpenTransactionDialog())" Text="Add" ButtonStyle="ButtonStyle.Secondary"/>
-        </label>
-
         <label class="rz-button" for="file-upload">
             <RadzenButton Shade="Shade.Darker" Text="Import" ButtonStyle="ButtonStyle.Secondary"/>
             <InputFile id="file-upload" OnChange="@ProcessImportedCsvFile" style="display:none;"/>
         </label>
     </div>
 
+    <RadzenButton 
+        ButtonStyle="ButtonStyle.Success"
+        Icon="add_circle_outline" 
+        class="mt-2 mb-4" 
+        Text="Add New Order" 
+        Click="@InsertRow" 
+        Disabled=@(TransactionToInsert != null || TransactionToUpdate != null) />
+    
     <RadzenDataGrid
+        @ref="TransactionsGrid"
+        AllowAlternatingRows="false"
         AllowFiltering="true"
-        AllowColumnResize="true"
-        AllowSorting="true"
-        PageSize="10"
         AllowPaging="true"
+        PageSize="10"
+        AllowSorting="true"
+        EditMode="DataGridEditMode.Single"
         Data="@Transactions"
         TItem="TransactionModel"
-        RowClick="e => OpenTransactionDialog(e.Data)">
+        RowUpdate="@OnUpdateRow"
+        RowCreate="@OnCreateRow"
+        ColumnWidth="200px">
         <Columns>
-            <RadzenDataGridColumn TItem="TransactionModel" Property="CreateDate" Title="Date" SortOrder="SortOrder.Descending"/>
+            @* Date *@
+            <RadzenDataGridColumn TItem="TransactionModel" Property="CreateDate" Title="Date" SortOrder="SortOrder.Descending">
+                <EditTemplate Context="transaction">
+                    <RadzenDatePicker @bind-Value="transaction.CreateDate"/>
+                </EditTemplate>
+                <Template Context="transaction">
+                    <span>@transaction.CreateDate.ToString("yyyy-MM-dd")</span>
+                </Template>
+            </RadzenDataGridColumn>
+
+            @* Amount *@
             <RadzenDataGridColumn TItem="TransactionModel" Property="AmountText" Title="Amount">
+                <EditTemplate Context="transaction">
+                    <RadzenNumeric TValue="decimal" @bind-Value="transaction.Amount" Style="width: 50%;"/>
+                </EditTemplate>
                 <Template Context="transaction">
                     <span class="@GetAmountCellStyle(transaction.Amount)">
                         @transaction.AmountText
                     </span>
                 </Template>
             </RadzenDataGridColumn>
-            <RadzenDataGridColumn TItem="TransactionModel" Property="Description" Title="Description"/>
+
+            @* Description *@
+            <RadzenDataGridColumn TItem="TransactionModel" Property="Description" Title="Description">
+                <EditTemplate Context="transaction">
+                    <RadzenTextBox @bind-Value="transaction.Description" Style="width: 70%;"/>
+                </EditTemplate>
+            </RadzenDataGridColumn>
+
+            @* Status *@
             <RadzenDataGridColumn TItem="TransactionModel" Property="Status" Title="Status">
+                <EditTemplate Context="transaction">
+                    <RadzenDropDown TValue="TransactionStatusEnum" 
+                                    Data="Enum.GetValues<TransactionStatusEnum>().Select(x => new { Value = x, Text = x.ToString() })" 
+                                    TextProperty="Text" 
+                                    ValueProperty="Value" 
+                                    @bind-Value="transaction.Status"
+                                    Style="width: 85%;"/>
+                </EditTemplate>
                 <Template Context="transaction">
                     <span class="@GetStatusCellStyle(transaction.Status)">
                         @transaction.Status
                     </span>
                 </Template>
             </RadzenDataGridColumn>
-            <RadzenDataGridColumn TItem="TransactionModel" Property="BankAccount.Name" Title="Account"/>
+
+            @* Account *@
+            <RadzenDataGridColumn TItem="TransactionModel" Property="BankAccount.Name" Title="Account">
+                <EditTemplate Context="transaction">
+                    <RadzenDropDown TValue="int" Data="@BankAccounts"
+                                    TextProperty="Name" ValueProperty="Id" @bind-Value="transaction.BankAccountId" Style="width: 85%;"/>
+                </EditTemplate>
+                <Template Context="transaction">
+                    @transaction.BankAccount.Name
+                </Template>
+            </RadzenDataGridColumn>
+
+            @* Actions  *@
+            <RadzenDataGridColumn TItem="TransactionModel" Context="transaction" Filterable="false" Sortable="false" TextAlign="TextAlign.Right" Width="156px">
+                <Template Context="transaction">
+                    <RadzenButton Icon="edit" ButtonStyle="ButtonStyle.Light" Variant="Variant.Flat" Size="ButtonSize.Medium" Click="@(() => EditRow(transaction))" @onclick:stopPropagation="true">
+                    </RadzenButton>
+                    <RadzenButton ButtonStyle="ButtonStyle.Danger" Icon="delete" Variant="Variant.Flat" Shade="Shade.Lighter" Size="ButtonSize.Medium" class="my-1 ms-1" Click="@(() => DeleteRow(transaction))" @onclick:stopPropagation="true">
+                    </RadzenButton>
+                </Template>
+                <EditTemplate Context="transaction">
+                    <RadzenButton Icon="check" ButtonStyle="ButtonStyle.Success" Variant="Variant.Flat" Size="ButtonSize.Medium" Click="@(() => SaveRow(transaction))">
+                    </RadzenButton>
+                    <RadzenButton Icon="close" ButtonStyle="ButtonStyle.Light" Variant="Variant.Flat" Size="ButtonSize.Medium" class="my-1 ms-1" Click="@(() => CancelEdit(transaction))">
+                    </RadzenButton>
+                    <RadzenButton ButtonStyle="ButtonStyle.Danger" Icon="delete" Variant="Variant.Flat" Shade="Shade.Lighter" Size="ButtonSize.Medium" class="my-1 ms-1" Click="@(() => DeleteRow(transaction))">
+                    </RadzenButton>
+                </EditTemplate>
+            </RadzenDataGridColumn>
+
         </Columns>
     </RadzenDataGrid>
 
@@ -70,30 +139,45 @@
     [Parameter]
     public int? BudgetId { get; set; }
     
-    private BudgetModel budget { get; set; }
+    private BudgetModel Budget { get; set; }
 
     private List<TransactionModel> Transactions { get; set; }
+
+    private List<BankAccountModel> BankAccounts { get; set; }
+
+    private RadzenDataGrid<TransactionModel> TransactionsGrid { get; set; }
+
+    private TransactionModel TransactionToInsert { get; set; }
+
+    private TransactionModel TransactionToUpdate { get; set; }
+
+    private int UserId { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
         await GetTransactions();
+        await GetBankAccounts();
     }
+
+    #region GetInitialValues
 
     private async Task GetTransactions()
     {
         var authState = await AuthState;
         if (authState.User.Identity?.IsAuthenticated ?? false)
         {
+            UserId = authState.User.GetUserId();
+            
             var getBudgetCommand = new GetBudget()
             {
                 BudgetId = BudgetId,
-                UserId = authState.User.GetUserId()
+                UserId = UserId
             };
 
             var defaultBudget = await Mediator.Send(getBudgetCommand);
             if (defaultBudget.Success)
             {
-                budget = defaultBudget.Value;
+                Budget = defaultBudget.Value;
 
                 var transactions = await Mediator.Send(new GetTransactionsForBudget
                 {
@@ -106,29 +190,109 @@
         }
     }
 
-    private async Task OpenTransactionDialog(TransactionModel? transaction = null)
+    private async Task GetBankAccounts()
     {
-        var bankAccounts = await Mediator.Send(new GetBankAccountsForBudget() { BudgetId = budget.Id });
-        
-        var parameters = new Dictionary<string, object>
-        {
-            { "BudgetId", budget.Id },
-            { "BankAccounts", bankAccounts}
-        };
+        BankAccounts = await Mediator.Send(new GetBankAccountsForBudget() { BudgetId = Budget.Id });
+    }
 
-        if (transaction is not null)
+    #endregion
+
+    #region ListElementActions
+
+    private async Task InsertRow()
+    {
+        TransactionToInsert = new TransactionModel()
         {
-            parameters.Add("Transaction", transaction);
+            CreateDate = TimeService.Now,
+            BudgetId = BudgetId!.Value
+        };
+        
+        await TransactionsGrid.InsertRow(TransactionToInsert);
+    }
+    
+    
+    private async Task OnCreateRow(TransactionModel transaction)
+    {
+        transaction.BankAccount = BankAccounts.Single(a => a.Id == transaction.BankAccountId);
+        await Mediator.Send(new CreateTransaction()
+        {
+            TransactionModel = transaction,
+            UserId = UserId
+        });
+
+        TransactionToInsert = null;
+    }
+    
+    private async Task OnUpdateRow(TransactionModel transaction)
+    {
+        await Mediator.Send(new UpdateTransaction()
+        {
+            TransactionModel = transaction,
+            UserId = UserId
+        });
+    }
+    
+    private async Task EditRow(TransactionModel transaction)
+    {
+        TransactionToUpdate = transaction;
+        await TransactionsGrid.EditRow(transaction);
+    }
+    
+    private async Task SaveRow(TransactionModel transaction)
+    {
+        await TransactionsGrid.UpdateRow(transaction);
+    }
+
+    private void CancelEdit(TransactionModel transaction)
+    {
+        if (transaction == TransactionToInsert)
+        {
+            TransactionToInsert = null;
         }
 
-        var dialogTitle = transaction is null ? "Add transaction" : "Modify transaction";
+        TransactionToUpdate = null;
+        TransactionsGrid.CancelEditRow(transaction);
+    }
 
-        bool? isTransactionAdded = await DialogService.OpenAsync<TransactionForm>(dialogTitle, parameters);
-        if (isTransactionAdded ?? false)
+    private async Task DeleteRow(TransactionModel transaction)
+    {
+        var dialogResult = await DialogService.Confirm("Are you sure you want to delete this transaction?", "Delete transaction",
+            new ConfirmOptions()
+            {
+                OkButtonText = "Yes",
+                CancelButtonText = "No",
+                
+            });
+
+        if (dialogResult.HasValue && dialogResult.Value)
         {
-            await GetTransactions();
+            if (transaction == TransactionToInsert)
+            {
+                TransactionToInsert = null;
+            }
+
+            if (transaction == TransactionToUpdate)
+            {
+                TransactionToUpdate = null;
+            }
+
+            var existingTransaction = Transactions.FirstOrDefault(a => a.Id == transaction.Id);
+            if (existingTransaction is not null)
+            {
+                await Mediator.Send(new DeleteTransaction()
+                {
+                    UserId = UserId,
+                    TransactionId = existingTransaction.Id
+                });
+
+                await TransactionsGrid.Reload();
+            }
         }
     }
+    
+    #endregion
+
+    #region CustomStylesForRowCells
 
     private string GetStatusCellStyle(TransactionStatusEnum status)
     {
@@ -147,6 +311,9 @@
             ? "green-font"
             : "red-font";
     }
+
+
+    #endregion
     
     private async Task ProcessImportedCsvFile(InputFileChangeEventArgs e)
     {
@@ -160,13 +327,12 @@
         var importedTransactions = await CsvService.GetRecordsFromCsvFile(e.File);
 
         var user = await AuthState;
-        var bankAccounts = await Mediator.Send(new GetBankAccountsForBudget() { BudgetId = budget.Id });
 
         var formParameters = new Dictionary<string, object>()
         {
             { "BudgetId", BudgetId!.Value },
             { "UserId", user.GetUserId() },
-            { "BankAccounts", bankAccounts},
+            { "BankAccounts", BankAccounts},
             { "Transactions", importedTransactions }
         };
         
